--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,14 @@
 language: php
 
 php:
-  - 5.5
   - 5.6
   - 7.0
   - 7.1
   - 7.2
+  - 7.3
 
-# environment variable used in test suite
-env: TEST_ENVIRONMENT=travis
+git:
+  depth: 1
 
 # faster builds on new travis setup not using sudo
 sudo: false
@@ -19,12 +19,17 @@ cache:
     - vendor
     - $HOME/.composer/cache
 
-# install dependencies
-install:
-  - travis_retry composer self-update && composer --version
-  - travis_retry composer update --prefer-dist --no-interaction
+env: DEFAULT_COMPOSER_FLAGS="--optimize-autoloader --no-interaction"
 
-# run tests
+before_install:
+  # Composer: boost installation
+  - composer global show hirak/prestissimo -q || travis_retry composer global require $DEFAULT_COMPOSER_FLAGS hirak/prestissimo
+
+install:
+  # install dependencies
+  - travis_retry composer self-update && composer --version
+  - travis_retry composer update --prefer-dist $DEFAULT_COMPOSER_FLAGS
+
 script:
   - composer validate --no-check-lock
   - composer test
