--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     {
       "name": "Vladimir Kuprienko",
       "email": "vldmr.kuprienko@gmail.com",
-      "role": "Developer"
+      "role": "Maintainer"
     }
   ],
   "repositories": [
@@ -22,6 +22,7 @@
     }
   ],
   "require": {
+    "php": ">=5.6.0",
     "yiisoft/yii2": "^2.0.0"
   },
   "require-dev": {
